add instruction of author

--- a/src/Gomoku/MyFrame.form
+++ b/src/Gomoku/MyFrame.form
@@ -156,6 +156,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="authored by skyadmin"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel4MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
